fix(ui): wrap footer items

--- a/client-src/base/footer.css
+++ b/client-src/base/footer.css
@@ -12,6 +12,7 @@ footer {
 
     /* flex container */
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
     align-items: end;
     line-height: 1rem;
